# esp32-gps-telemetry-idf

./: .gitignore  README.md  docker-compose.yml
docs/logs/: gps_fix_real_terminal.txt  telemetry_powerbank_export_raw.txt
gps_uart_test/: .gitignore  CMakeLists.txt
gps_uart_test/main/: CMakeLists.txt  gps_parser.h  main.c
gps_uart_test/main/config/: telemetry_config_example.h
gps_uart_test/main/gps/: gps_uart.c  gps_uart.h  nmea_parser.c  nmea_parser.h
gps_uart_test/main/legacy/: gps_diagnostic.c  gps_diagnostic.h  gps_parser.c
gps_uart_test/main/network/: mqtt_publisher.c  mqtt_publisher.h  wifi_manager.c  wifi_manager.h
gps_uart_test/main/storage/: sdcard_logger.c  sdcard_logger.h
gps_uart_test/main/telemetry/: mqtt_publisher.c  mqtt_publisher.h  telemetry.c  telemetry.h
tools/gps_analyzer/: analyze_session.py
